--- a/style.css
+++ b/style.css
@@ -63,6 +63,19 @@ input {
   padding: 20px;
   text-align: center;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  /*  */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.profile-card-item {
+  background: var(--text);
+  color: var(--card);
+  border-radius: 12px;
+  padding: 20px;
+  text-align: left;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .avatar {
