--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   --text: #c9d1d9;
   --accent: #238636;
   --error: #f85149;
+  --small-card: #2a313c;
 }
 
 body {
@@ -12,15 +13,17 @@ body {
   background: var(--bg);
   color: var(--text);
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   padding: 40px 20px;
   min-height: 100vh;
 }
 
 .container {
   width: 100%;
-  max-width: 420px;
+  max-width: calc(100% - 400px);
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -32,7 +35,7 @@ form {
   display: flex;
   justify-content: center;
   gap: 8px;
-  margin-bottom: 24px;
+  margin-bottom: 100px;
 }
 
 input {
@@ -56,39 +59,13 @@ input {
 .btn:hover {
   background: #2ea043;
 }
-
-.profile-card {
-  background: var(--card);
-  border-radius: 12px;
-  padding: 20px;
-  text-align: center;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  /*  */
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.profile-card-item {
-  background: var(--text);
-  color: var(--card);
-  border-radius: 12px;
-  padding: 20px;
-  text-align: left;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-}
-
-.profile-card-item a:hover {
-  font-weight: bold;
-}
-
+/* 
 .avatar {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   border: 2px solid var(--accent);
-  grid-template-columns: 1fr;
-}
+} */
 
 h2 {
   margin: 12px 0 4px;
@@ -108,3 +85,67 @@ a:hover {
   font-weight: 600;
   margin-top: 16px;
 }
+/* New Style */
+
+#profile-card {
+  width: 50%;
+  height: fit-content;
+  background: whitesmoke;
+  padding: 60px 20px 20px;
+  border-radius: 20px;
+  text-align: center;
+  color: var(--card);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 150px;
+  overflow: visible;
+}
+.profile-avatar-wrapper {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.profile-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 5px solid #fff;
+}
+
+#userData {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  gap: 25px;
+}
+
+.profile-details {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+
+.profile-details-item {
+  background-color: var(--small-card);
+  border-radius: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+#backToTop{
+  position: fixed;
+  right: 25px;
+  bottom: 25px;
+  display: none;
+}
+
+#backToTop:hover{
+  transform: translateY(-10px);
+}
+
