--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ a:hover {
   justify-content: space-around;
   align-items: flex-start;
   border-radius: 20px;
+  text-align: left;
   padding: 20px;
   color: var(--text);
 }
@@ -232,7 +233,6 @@ a:hover {
   color: #fff;
 }
 .starContainer .starCount {
-  /* background-color: red; */
   border-radius: 50%;
   padding: 0 5px;
   border: 1px var(--small-card) solid;
