--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
   --small-card: #2a313c;
 }
 
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
 body {
   margin: 0;
   font-family: "Rubik", sans-serif;
@@ -248,6 +254,56 @@ a:hover {
   align-self: flex-end;
 }
 
+.skeleton {
+  animation: skeleton-loading 1s linear infinite alternate;
+  opacity: 0.4;
+}
+
+.skeleton-text {
+  width: 100%;
+  height: 0.5rem;
+  margin-bottom: 0.1rem;
+  margin-top: 0;
+  border-radius: 0.125rem;
+}
+
+.skeleton-title {
+  width: 50%;
+}
+
+.skeleton-title > * {
+  margin: 0;
+  margin-bottom: 0.1rem;
+}
+
+.skeleton-btn {
+  width: 25%;
+}
+.btnContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 5px;
+  margin-top: 0.5rem;
+}
+.btnContainer > * {
+  height: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+}
+
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 70%);
+    /* background-color: hsl(207, 29%, 80%); */
+  }
+  100% {
+    background-color: hsl(200, 20%, 95%);
+    /* background-color: hsl(207, 29%, 92%); */
+  }
+}
 /* ==== Media Query === */
 @media screen and (max-width: 1250px) {
   #follow-info {
