fix: update profile card handling and add clearProfileCard function for better data management

--- a/style.css
+++ b/style.css
@@ -130,7 +130,8 @@ a:hover {
   border-radius: 50%;
 }
 
-.profile-img:not([src]) {
+.profile-img:not([src]),
+.profile-img[src=""] {
   display: none;
 }
 
